DietPi-Software | Added installation option for Webmin: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=3047#p3047
DietPi-Software | Libcec3 now installed with Kodi by default: https://github.com/Fourdee/DietPi/issues/283
DietPi-Software | Emby is now available for ARM64 devices. Many thanks to Gabriel for making this possible: http://dietpi.com/phpbb/viewtopic.php?f=11&t=720&p=3120#p3117
DietPi-Config | You can now change Apt mirrors from the "Networking NAS/Misc menu": https://github.com/Fourdee/DietPi/issues/519
DietPi-Config | Added ability to tweak Ondemand sampling rates in the performance menu: https://github.com/Fourdee/DietPi/issues/541
DietPi-Drive_Manager | To support large filesystems, GPT is now the default paritition table type on format, (previously MBR). Many thanks to Zone22: https://github.com/Fourdee/DietPi/issues/531
DietPi-Drive_Manager | Current userdata location is now shown in the main menu.
DietPi-Set_Cpu | If the target CPU gov is not available on the system, an alternative will be set and saved automatically.
DietPi-Automation | Added a global password var (AUTO_Global_Password=) in dietpi.txt, which will be applied to root login, and, during dietpi-software installations, for all software that use a password: https://github.com/Fourdee/DietPi/issues/533
DietPi-Automation | Added filesystem format type for USB drive format (AUTO_Dedicated_Usb_Drive_Format_Filesystem=) in dietpi.txt: https://github.com/Fourdee/DietPi/issues/537
General | Interactive is now the default CPU gov, provides improved response times: https://github.com/Fourdee/DietPi/issues/535

Bug fixes:
DietPi-Software | Emby has been disabled for ARMv6 devices, due to unsupported/broken repo on armv6 hardware: https://github.com/Fourdee/DietPi/issues/534
DietPi-Software | Resolved an issue where Nginx would prevent file uploads over 2MB. Many thanks to @pfeerick for reporting this and providing the solution: https://github.com/Fourdee/DietPi/issues/546