@@ -26,6 +26,11 @@ Static_DNS=8.8.8.8
 #Hostname
 Hostname=DietPi
 
+#Force ethernet speeds
+#NB: This is mainly aimed towards Pine A64's which may have a HW issue that causes unstable 1Gbit link.
+#	0=automatic speed | 10 = 10mbit, 100 = 100mbit etc
+Ethernet_Force_Speed=0
+
 # >> Misc Options -----------------------------------
 #Size of dphys-swapfile to generate (MB)
 #   0=Disabled.
