@@ -207,6 +207,9 @@ _EOF_
 
 		fi
 
+		#Apply forced eth speed if set in dietpi.txt
+		/DietPi/dietpi/func/dietpi-set_hardware eth-forcespeed $(cat /DietPi/dietpi.txt | grep -m1 '^Ethernet_Force_Speed=' | sed 's/.*=//' )
+
 		#Wait for active connection, then update network details file
 		Wait_For_Valid_Network_Connection
 
