@@ -8,7 +8,6 @@ iface lo inet loopback
 # Ethernet
 #allow-hotplug eth0
 iface eth0 inet dhcp
-metric 0
 address 192.168.0.100
 netmask 255.255.255.0
 gateway 192.168.0.1
@@ -17,7 +16,6 @@ gateway 192.168.0.1
 # Wifi
 #allow-hotplug wlan0
 iface wlan0 inet dhcp
-metric 1
 address 192.168.0.100
 netmask 255.255.255.0
 gateway 192.168.0.1
