@@ -3055,19 +3055,18 @@ _EOF_
 
 			if (( $HW_ARCH == 21 )); then
 
-				INSTALL_URL_ADDRESS="http://hndl.urbackup.org/Server/2.0.34/urbackup-server_2.0.34_amd64.deb"
+				INSTALL_URL_ADDRESS="http://hndl.urbackup.org/Server/2.0.36/urbackup-server_2.0.36_amd64.deb"
 
 			elif (( $HW_ARCH >= 1 && $HW_ARCH < 10 )); then
 
-				INSTALL_URL_ADDRESS="http://hndl.urbackup.org/Server/2.0.34/urbackup-server_2.0.34_armhf.deb"
+				INSTALL_URL_ADDRESS="http://hndl.urbackup.org/Server/2.0.36/urbackup-server_2.0.36_armhf.deb"
 
 			#ARM64 sourcebuild
 			elif (( $HW_ARCH == 10 )); then
 
-				INSTALL_URL_ADDRESS="http://hndl.urbackup.org/Server/2.0.34/urbackup-server-2.0.34.tar.gz"
+				INSTALL_URL_ADDRESS="http://hndl.urbackup.org/Server/2.0.36/urbackup-server-2.0.36.tar.gz"
 
 			fi
-
 
 			/DietPi/dietpi/func/check_connection "$INSTALL_URL_ADDRESS"
 
@@ -7808,6 +7807,7 @@ _EOF_
 
 			#As we have /tmp mounted to RAM, change tmp locations
 			sed -i '/DAEMON_TMPDIR=/c\DAEMON_TMPDIR="/var/tmp"' /etc/default/urbackupsrv
+
 
 		fi
 
