@@ -116,6 +116,9 @@
 	/DietPi/dietpi/func/dietpi-set_hardware bluetooth disable
 	/DietPi/dietpi/func/dietpi-set_hardware wifi disable
 
+	# Disable forced eth speed if set
+	/DietPi/dietpi/func/dietpi-set_hardware eth-forcespeed disable
+
 	# Reset IP version pref
 	/DietPi/dietpi/func/dietpi-set_hardware preferipversion auto
 
