@@ -10,7 +10,7 @@
 	#////////////////////////////////////
 	#
 	# Usage:
-	#
+	# - /DietPi/dietpi/func/dietpi-set_hardware 		eth-forcespeed	10/100/1000/disable
 	# - /DietPi/dietpi/func/dietpi-set_hardware 		rpi-opengl		enable/disable
 	# - /DietPi/dietpi/func/dietpi-set_hardware 		i2c				enable/disable/khz
 	# - /DietPi/dietpi/func/dietpi-set_hardware 		wificountrycode	code
@@ -57,6 +57,45 @@
 		/DietPi/dietpi/func/dietpi-notify 2 "Unknown input value ($INPUT_DEVICE_VALUE). Nothing has been applied."
 
 	}
+
+	#/////////////////////////////////////////////////////////////////////////////////////
+	#Ethernet force link speed
+	#/////////////////////////////////////////////////////////////////////////////////////
+	Eth_Force_Speed_Main(){
+
+		if (( $INPUT_DEVICE_VALUE > 0 )); then
+
+			local eth_force_speed=$INPUT_DEVICE_VALUE
+			local eth_adapter="eth$(sed -n 1p /DietPi/dietpi/.network)"
+
+			cat << _EOF_ > /etc/systemd/system/ethtool_force_speed.service
+[Unit]
+Description=ethtool force speed
+After=network-online.target
+
+[Service]
+Type=oneshot
+ExecStart=/sbin/ethtool -s $eth_adapter speed $eth_force_speed duplex full autoneg off
+
+[Install]
+WantedBy=ifup@$eth_adapter.service
+_EOF_
+			systemctl enable ethtool_force_speed.service
+			systemctl start ethtool_force_speed.service
+
+		elif [ "$INPUT_DEVICE_VALUE" = "disable" ]; then #0 is converted to 'disabled'
+
+			rm /etc/systemd/system/ethtool_force_speed.service &> /dev/null
+			systemctl daemon-reload
+
+		else
+
+			Unknown_Input_Mode
+
+		fi
+
+	}
+
 
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#RPi openGL
@@ -411,8 +450,8 @@ _EOF_
 
 		aBLUETOOTH_MODULES+=("btbcm") # rpi3 broadcom onboard
 
-		aBLUETOOTH_MODULES+=("rfcomm") # BPi pro
-		aBLUETOOTH_MODULES+=("hidp") # BPi pro
+		aBLUETOOTH_MODULES+=("rfcomm") # BPi pro/m2+ and others
+		aBLUETOOTH_MODULES+=("hidp") # BPi pro/m2+ and others
 
 		aBLUETOOTH_MODULES+=("hci_uart")
 
@@ -543,7 +582,10 @@ _EOF_
 		# + BPi Pro
 		aWIFI_MODULES+=("ap6211") #onboard
 
-		# + BPi M2+ / NanoPi T3
+		# + BPi M2+
+		#aWIFI_MODULES+=("dhd") #Hangs on v133 image with updated ARMbian build
+
+		# + NanoPi T3
 		aWIFI_MODULES+=("bcmdhd")
 
 		# - Disable
@@ -1065,6 +1107,10 @@ _EOF_
 	elif [ "$INPUT_DEVICE_NAME" = "rpi-opengl" ]; then
 
 		RPi_OpenGL_Main
+
+	elif [ "$INPUT_DEVICE_NAME" = "eth-forcespeed" ]; then
+
+		Eth_Force_Speed_Main
 
 	else
 
