@@ -1622,6 +1622,9 @@ _EOF_
 
 		fi
 		#-------------------------------------------------------------------------------
+		#ethtool:
+		apt-get install -y ethtool
+		#-------------------------------------------------------------------------------
 
 	fi
 
